
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef int time_t ;
struct PreprocessedInfo {int dummy; } ;
struct Output {int dummy; } ;



void
handle_oproto(struct Output *out, time_t timestamp,
              const unsigned char *px, unsigned length,
              struct PreprocessedInfo *parsed,
              uint64_t entropy)
{

}
